Buat bisa login google beneran muehehe

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
             },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0', transform: 'translateY(-10px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              }
+            },
+            animation: {
+              fadeIn: 'fadeIn 0.5s ease-out forwards',
+            }
           },
         },
       }
@@ -33,6 +42,14 @@
           -ms-overflow-style: none;  /* IE and Edge */
           scrollbar-width: none;  /* Firefox */
       }
+      /* Fallback CSS animation if Tailwind config fails */
+      .fade-in {
+        animation: fadeIn 0.5s ease-out forwards;
+      }
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(-10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
     </style>
 <script type="importmap">
 {
@@ -41,7 +58,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react-hot-toast": "https://esm.sh/react-hot-toast@^2.6.0"
+    "react-hot-toast": "https://esm.sh/react-hot-toast@^2.6.0",
+    "@react-oauth/google": "https://esm.sh/@react-oauth/google@^0.12.2"
   }
 }
 </script>
