--- a/index.html
+++ b/index.html
@@ -33,16 +33,13 @@
       body {
         font-family: 'Inter', sans-serif;
       }
-      /* Hide scrollbar for Chrome, Safari and Opera */
       .no-scrollbar::-webkit-scrollbar {
           display: none;
       }
-      /* Hide scrollbar for IE, Edge and Firefox */
       .no-scrollbar {
-          -ms-overflow-style: none;  /* IE and Edge */
-          scrollbar-width: none;  /* Firefox */
+          -ms-overflow-style: none; 
+          scrollbar-width: none; 
       }
-      /* Fallback CSS animation if Tailwind config fails */
       .fade-in {
         animation: fadeIn 0.5s ease-out forwards;
       }
